--- a/core/src/main/res/menu/menu_bottom_navigation.xml
+++ b/core/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_home_nav_graph"
+        android:id="@+id/menu_news_nav_graph"
         android:title="Домой"
         app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/menu_championship_nav_graph"
+        android:title="Чемпионат"
+        app:showAsAction="ifRoom"/>
 </menu>
