--- a/navigation-graph/src/main/res/navigation/menu_news_nav_graph.xml
+++ b/navigation-graph/src/main/res/navigation/menu_news_nav_graph.xml
@@ -2,12 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/menu_home_nav_graph"
+    android:id="@+id/menu_news_nav_graph"
     app:startDestination="@id/newsFragment">
 
     <fragment
         android:id="@+id/newsFragment"
-        android:name="ru.kozirfm.news.ui.screennews.NewsFragment"
+        android:name="ru.kozirfm.news.ui.NewsFragment"
         android:label="News"
         tools:layout="@layout/fragment_news" />
 
