--- a/core/src/main/res/menu/menu_bottom_navigation.xml
+++ b/core/src/main/res/menu/menu_bottom_navigation.xml
@@ -6,7 +6,13 @@
         android:title="Домой"
         app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/menu_championship_nav_graph"
+    <item
+        android:id="@+id/menu_championship_nav_graph"
         android:title="Чемпионат"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_calendar_nav_graph"
+        android:title="Calendar"
+        app:showAsAction="ifRoom" />
 </menu>
