--- a/navigation-graph/src/main/res/navigation/menu_calendar_nav_graph.xml
+++ b/navigation-graph/src/main/res/navigation/menu_calendar_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/calendarFragment"
         android:name="ru.kozirfm.calendar.ui.CalendarFragment"
-        android:label="Calendar"
+        android:label="@string/calendar"
         tools:layout="@layout/fragment_calendar" />
 
 </navigation>
