--- a/navigation-graph/src/main/res/navigation/menu_championship_nav_graph.xml
+++ b/navigation-graph/src/main/res/navigation/menu_championship_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/championshipFragment"
         android:name="ru.kozirfm.championship.ui.ChampionshipFragment"
-        android:label="Championship"
+        android:label="@string/championship"
         tools:layout="@layout/fragment_championship" />
 
 </navigation>
