Add compose ModalBottomSheet to NewsFragment.kt, add SplashActivity.kt

--- a/navigation/src/main/res/navigation/root_nav_graph.xml
+++ b/navigation/src/main/res/navigation/root_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_nav_graph"
-    app:startDestination="@id/fragment_splash">
+    app:startDestination="@id/fragment_main">
 
     <include app:graph="@navigation/login_nav_graph"/>
     <include app:graph="@navigation/menu_news_nav_graph" />
@@ -15,11 +15,6 @@
         android:name="ru.kozirfm.core.main.MainFragment"
         android:label="MainFragment"
         tools:layout="@layout/fragment_main" />
-
-    <fragment
-        android:id="@+id/fragment_splash"
-        android:name="ru.kozirfm.core.base.SplashFragment"
-        android:label="SplashScreenFragment" />
 
     <action
         android:id="@+id/toMainFragment"
