--- a/core/src/main/res/menu/menu_bottom_navigation.xml
+++ b/core/src/main/res/menu/menu_bottom_navigation.xml
@@ -4,15 +4,18 @@
     <item
         android:id="@+id/menu_news_nav_graph"
         android:title="@string/news"
+        android:icon="@drawable/ic_news"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_championship_nav_graph"
         android:title="@string/championship"
+        android:icon="@drawable/ic_championship"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_calendar_nav_graph"
         android:title="@string/calendar"
+        android:icon="@drawable/ic_calendar"
         app:showAsAction="ifRoom" />
 </menu>
